--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,81 +7,62 @@ on:
     branches: [main, develop]
 
 jobs:
-  shellcheck:
-    name: ShellCheck
+  terraform-fmt:
+    name: Terraform Format
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
-      - name: Run ShellCheck
-        uses: ludeeus/action-shellcheck@master
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          scandir: './scripts'
-          severity: warning
+          terraform_version: '1.5'
 
-  bats:
-    name: Bats Tests
+      - name: Check Terraform formatting
+        run: terraform fmt -check -recursive -diff
+        working-directory: infrastructure/proxmox
+
+  terraform-validate:
+    name: Terraform Validate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
 
-      - name: Setup Bats
-        uses: bats-core/bats-action@3.0.1
-
-      - name: Run Bats tests
-        run: bats tests/*.bats
-
-      - name: Generate test summary
-        if: always()
-        run: |
-          echo "## Bats Test Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Tests completed. Check the logs above for detailed results." >> $GITHUB_STEP_SUMMARY
-
-  coverage:
-    name: Test Coverage
-    runs-on: ubuntu-latest
-    continue-on-error: true  # Coverage is informational, not blocking
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-
-      - name: Setup Bats
-        uses: bats-core/bats-action@3.0.1
-
-      - name: Install kcov
-        run: |
-          # Install kcov build dependencies
-          sudo apt-get update
-          sudo apt-get install -y cmake g++ pkg-config libcurl4-openssl-dev libelf-dev libdw-dev zlib1g-dev
-          # Build and install kcov from source
-          git clone --depth 1 https://github.com/SimonKagstrom/kcov.git /tmp/kcov
-          cd /tmp/kcov
-          mkdir build && cd build
-          cmake ..
-          make -j$(nproc)
-          sudo make install
-
-      - name: Run tests with coverage
-        run: |
-          mkdir -p coverage
-          kcov --include-path=./scripts coverage bats tests/*.bats || true
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          directory: ./coverage
-          fail_ci_if_error: false
+          terraform_version: '1.5'
 
-      - name: Generate coverage summary
-        if: always()
-        run: |
-          echo "## Coverage Report" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          if [ -f coverage/bats/coverage.json ]; then
-            echo "Coverage report generated. See Codecov for details." >> $GITHUB_STEP_SUMMARY
-          else
-            echo "Coverage report not available." >> $GITHUB_STEP_SUMMARY
-          fi
+      - name: Terraform Init (modules)
+        run: terraform init -backend=false
+        working-directory: infrastructure/proxmox/modules/vm
+
+      - name: Terraform Validate (VM module)
+        run: terraform validate
+        working-directory: infrastructure/proxmox/modules/vm
+
+      - name: Terraform Init (LXC module)
+        run: terraform init -backend=false
+        working-directory: infrastructure/proxmox/modules/lxc
+
+      - name: Terraform Validate (LXC module)
+        run: terraform validate
+        working-directory: infrastructure/proxmox/modules/lxc
+
+  markdown-lint:
+    name: Markdown Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Lint Markdown files
+        uses: DavidAnson/markdownlint-cli2-action@v19
+        with:
+          globs: |
+            **/*.md
+            !.claude/**/*.md
+            !node_modules/**/*.md
+        continue-on-error: true
