docs(terraform): update README for externalized tfvars config
- Update "Personnalisation" section to reference terraform.tfvars
  instead of local.vms/local.containers in main.tf
- Add vms and containers examples to terraform.tfvars.example
- Align documentation with refactor from commit a027f9b

--- a/infrastructure/proxmox/environments/home/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/home/terraform.tfvars.example
@@ -64,3 +64,43 @@ ssh_public_keys = [
 # -----------------------------------------------------------------------------
 
 environment = "home"
+
+# -----------------------------------------------------------------------------
+# VMs
+# -----------------------------------------------------------------------------
+
+vms = {
+  # Exemple de VM simple
+  "my-vm" = {
+    ip     = "192.168.1.10"
+    cores  = 2
+    memory = 2048
+    disk   = 20
+    tags   = ["web"]
+  }
+  # Exemple de VM avec Docker
+  # "docker-server" = {
+  #   ip     = "192.168.1.20"
+  #   cores  = 4
+  #   memory = 4096
+  #   disk   = 50
+  #   docker = true
+  #   tags   = ["docker", "server"]
+  # }
+}
+
+# -----------------------------------------------------------------------------
+# Conteneurs LXC
+# -----------------------------------------------------------------------------
+
+containers = {
+  # Exemple de conteneur LXC
+  # "my-service" = {
+  #   ip      = "192.168.1.30"
+  #   cores   = 1
+  #   memory  = 512
+  #   disk    = 10
+  #   nesting = false
+  #   tags    = ["service"]
+  # }
+}
