feat: refactor terraform into multi-environment architecture
Restructure the Terraform codebase to support multiple independent
Proxmox VE instances with a dedicated monitoring PVE:

- Rename environments: home→prod, office→lab
- Create dedicated monitoring environment (no workloads)
- Add remote_scrape_targets to monitoring-stack module for cross-PVE scraping
- Consolidate all PVE instances to 192.168.1.0/24 network
  (pve-prod=.100, pve-lab=.110, pve-mon=.50)
- Extract provider.tf and versions.tf per environment
- Add _shared/ templates for backend and provider config
- Remove orphaned root-level main.tf and variables.tf
- Update CI matrix to validate all modules and environments
- Update READMEs with 3-environment architecture documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,15 @@ jobs:
   terraform-validate:
     name: Terraform Validate
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory:
+          - infrastructure/proxmox/modules/vm
+          - infrastructure/proxmox/modules/lxc
+          - infrastructure/proxmox/modules/monitoring-stack
+          - infrastructure/proxmox/environments/prod
+          - infrastructure/proxmox/environments/lab
+          - infrastructure/proxmox/environments/monitoring
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,21 +44,13 @@ jobs:
         with:
           terraform_version: '1.5'
 
-      - name: Terraform Init (modules)
+      - name: Terraform Init
         run: terraform init -backend=false
-        working-directory: infrastructure/proxmox/modules/vm
+        working-directory: ${{ matrix.directory }}
 
-      - name: Terraform Validate (VM module)
+      - name: Terraform Validate
         run: terraform validate
-        working-directory: infrastructure/proxmox/modules/vm
-
-      - name: Terraform Init (LXC module)
-        run: terraform init -backend=false
-        working-directory: infrastructure/proxmox/modules/lxc
-
-      - name: Terraform Validate (LXC module)
-        run: terraform validate
-        working-directory: infrastructure/proxmox/modules/lxc
+        working-directory: ${{ matrix.directory }}
 
   markdown-lint:
     name: Markdown Lint
