fix: use correct default_node hostnames in tfvars examples
Set default_node to pve-prod and pve-lab to match the planned
Proxmox hostnames instead of the generic "pve" value.

--- a/infrastructure/proxmox/environments/prod/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/prod/terraform.tfvars.example
@@ -25,7 +25,7 @@ proxmox_insecure = true
 # -----------------------------------------------------------------------------
 
 # Nom du node Proxmox (visible dans l'interface web)
-default_node = "pve"
+default_node = "pve-prod"
 
 # ID du template VM cloud-init (créé lors de l'installation)
 vm_template_id = 9000
