--- a/infrastructure/proxmox/environments/lab/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/lab/terraform.tfvars.example
@@ -25,7 +25,7 @@ proxmox_insecure = true
 # -----------------------------------------------------------------------------
 
 # Nom du node Proxmox (visible dans l'interface web)
-default_node = "pve"
+default_node = "pve-lab"
 
 # ID du template VM cloud-init (cree lors de l'installation)
 vm_template_id = 9000
