chore: add .terraform.lock.hcl and update .gitignore
Lock Terraform provider versions for reproducible builds.
Ignore .claude/ and mise.toml from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,12 @@ npm-debug.log*
 # Test coverage
 coverage/
 
-# Claude Code local config
+# Claude Code
+.claude/
 CLAUDE.local.md
-.claude/settings.local.json
+
+# Mise
+mise.toml
 
 # Docusaurus
 website/node_modules/
