--- a/infrastructure/proxmox/environments/prod/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/prod/terraform.tfvars.example
@@ -94,6 +94,27 @@ vms = {
 # Conteneurs LXC
 # -----------------------------------------------------------------------------
 
+# -----------------------------------------------------------------------------
+# Sauvegardes vzdump
+# -----------------------------------------------------------------------------
+
+backup = {
+  enabled  = true
+  schedule = "01:00"       # Quotidien a 1h du matin
+  storage  = "local"       # Storage Proxmox pour les sauvegardes
+  mode     = "snapshot"    # snapshot (pas d'arret), suspend, ou stop
+  compress = "zstd"        # zstd (recommande), lzo, gzip, none
+  retention = {
+    keep_daily   = 7       # Garder 7 sauvegardes quotidiennes
+    keep_weekly  = 4       # Garder 4 sauvegardes hebdomadaires
+    keep_monthly = 0       # Pas de retention mensuelle
+  }
+}
+
+# -----------------------------------------------------------------------------
+# Conteneurs LXC
+# -----------------------------------------------------------------------------
+
 containers = {
   # Exemple de conteneur LXC
   # "my-service" = {
