--- a/infrastructure/proxmox/modules/monitoring-stack/files/prometheus/alerts/default.yml
+++ b/infrastructure/proxmox/modules/monitoring-stack/files/prometheus/alerts/default.yml
@@ -95,12 +95,12 @@ groups:
           description: "Proxmox node memory usage is above 90% (current: {{ $value | printf \"%.1f\" }}%)"
 
       - alert: ProxmoxStorageAlmostFull
-        expr: (pve_storage_usage_bytes / pve_storage_size_bytes) * 100 > 85
+        expr: (pve_disk_usage_bytes{id=~"storage/.*"} / pve_disk_size_bytes{id=~"storage/.*"}) * 100 > 85
         for: 5m
         labels:
           severity: warning
         annotations:
-          summary: "Storage {{ $labels.storage }} almost full on {{ $labels.node }}"
+          summary: "Storage almost full on {{ $labels.node }}"
           description: "Storage usage is above 85% (current: {{ $value | printf \"%.1f\" }}%)"
 
   # ---------------------------------------------------------------------------
@@ -127,33 +127,33 @@ groups:
           description: "Prometheus configuration reload has failed."
 
   # ---------------------------------------------------------------------------
-  # Backup Alerts - vzdump monitoring
+  # Backup Alerts - vzdump monitoring (pve-exporter >= 3.7.0)
   # ---------------------------------------------------------------------------
   - name: backup-alerts
     rules:
-      - alert: BackupJobFailed
-        expr: increase(pve_backup_duration_seconds{status="failed"}[24h]) > 0
+      - alert: GuestsNotBackedUp
+        expr: pve_backup_not_enabled_total > 0
+        for: 10m
+        labels:
+          severity: warning
+        annotations:
+          summary: "{{ $value }} guest(s) not covered by any backup job"
+          description: "There are {{ $value }} VMs/CTs without backup enabled. Check pve_backup_not_enabled_info for details."
+
+      - alert: BackupStorageAlmostFull
+        expr: (pve_disk_usage_bytes{id=~"storage/.*", content=~".*backup.*"} / pve_disk_size_bytes{id=~"storage/.*", content=~".*backup.*"}) * 100 > 80
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          summary: "Backup storage almost full on {{ $labels.node }}"
+          description: "Backup storage usage is above 80% (current: {{ $value | printf \"%.1f\" }}%) on {{ $labels.node }}."
+
+      - alert: BackupStorageCritical
+        expr: (pve_disk_usage_bytes{id=~"storage/.*", content=~".*backup.*"} / pve_disk_size_bytes{id=~"storage/.*", content=~".*backup.*"}) * 100 > 95
         for: 1m
         labels:
           severity: critical
         annotations:
-          summary: "Backup job failed on {{ $labels.node }}"
-          description: "A vzdump backup job has failed on node {{ $labels.node }} in the last 24 hours."
-
-      - alert: BackupJobMissing
-        expr: time() - pve_backup_last_successful_timestamp > 172800
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "No successful backup for {{ $labels.node }} in 48h"
-          description: "No successful vzdump backup has been recorded for node {{ $labels.node }} for more than 48 hours."
-
-      - alert: BackupStorageAlmostFull
-        expr: (pve_storage_usage_bytes{storage=~".*backup.*|local"} / pve_storage_size_bytes{storage=~".*backup.*|local"}) * 100 > 80
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Backup storage {{ $labels.storage }} almost full on {{ $labels.node }}"
-          description: "Backup storage usage is above 80% (current: {{ $value | printf \"%.1f\" }}%) on {{ $labels.node }}."
+          summary: "Backup storage critically full on {{ $labels.node }}"
+          description: "Backup storage usage is above 95% (current: {{ $value | printf \"%.1f\" }}%) on {{ $labels.node }}. Backups will fail."
