feat(backup): add backup strategy with Minio S3, vzdump and monitoring (#15)
* feat(backup): add backup strategy with Minio S3 and vzdump scheduling

Implement a complete backup strategy for the Proxmox VE homelab:

- Add Minio S3 module (LXC container) for Terraform state backend
- Add backup module for vzdump scheduling via pvesh API
- Add backup_enabled variable to VM and LXC modules
- Configure per-environment backup schedules and retention policies
- Add S3 backend configuration (commented) for all 3 environments
- Add Prometheus backup alerts (failed, missing, storage full)
- Add Grafana backup-overview dashboard
- Add restore procedures documentation (docs/BACKUP-RESTORE.md)
- Update README with backup section and new module structure

Spec: specs/backup-strategy/spec.md
Plan: specs/backup-strategy/plan.md

* feat(monitoring): bump pve-exporter to 3.7.0 and redesign backup dashboard

Upgrade pve-exporter from 3.4.5 to 3.7.0 to gain backup coverage
metrics (pve_backup_not_enabled_total, pve_backup_not_enabled_info).
Stop at 3.7.0 to avoid 3.8.0 breaking gauge-to-counter rename.

Backup dashboard redesign:
- Fix storage queries to use correct pve_disk_*_bytes{id=~"storage/.*"}
- Add backup coverage section (unprotected guests count + detail table)
- Add enriched guest table (status, CPU%, mem%, disk, uptime, HA state)
- Add storage bar gauges (usage % + space allocation) inspired by #24550
- Add drill-down link to pve-exporter dashboard from guest table
- Leverage pve_ha_state metric from pve-exporter 3.5.0

Alert rules updated:
- Replace hypothetical backup metrics with real pve-exporter 3.7.0 ones
- Add GuestsNotBackedUp alert using pve_backup_not_enabled_total
- Add BackupStorageCritical (>95%) alongside existing warning (>80%)
- Fix ProxmoxStorageAlmostFull to use correct metric names

* chore: ignore terraform lock files in test directories

* fix(ci): update terraform-docs and remove hardcoded password

- Regenerate README.md for vm, lxc, monitoring-stack

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ npm-debug.log*
 coverage/
 
 # Claude Code
+CLAUDE.md
 .claude/
 CLAUDE.local.md
 
@@ -70,6 +71,9 @@ override.tf.json
 # CLI configuration files
 .terraformrc
 terraform.rc
+
+# Lock files in test directories (generated during terraform init)
+tests/**/.terraform.lock.hcl
 
 # =============================================================================
 # Secrets et credentials
