--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -69,8 +69,7 @@ jobs:
         with:
           directory: infrastructure/proxmox
           framework: terraform
-          # TODO: switch to hard fail once baseline is clean
-          soft_fail: true
+          soft_fail: false
           output_format: sarif
           output_file_path: checkov-results.sarif
 
