--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: '1.5.7'
+          terraform_version: '1.9.8'
 
       - name: Check Terraform formatting
         run: terraform fmt -check -recursive -diff
@@ -40,6 +40,8 @@ jobs:
         directory:
           - infrastructure/proxmox/modules/vm
           - infrastructure/proxmox/modules/lxc
+          - infrastructure/proxmox/modules/backup
+          - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
           - infrastructure/proxmox/environments/prod
           - infrastructure/proxmox/environments/lab
@@ -51,7 +53,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: '1.5.7'
+          terraform_version: '1.9.8'
 
       - name: Terraform Init
         run: terraform init -backend=false
@@ -60,6 +62,36 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
         working-directory: ${{ matrix.directory }}
+
+  terraform-test:
+    name: Terraform Test
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: [terraform-validate]
+    strategy:
+      matrix:
+        module:
+          - infrastructure/proxmox/modules/vm
+          - infrastructure/proxmox/modules/lxc
+          - infrastructure/proxmox/modules/backup
+          - infrastructure/proxmox/modules/minio
+          - infrastructure/proxmox/modules/monitoring-stack
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: '1.9.8'
+
+      - name: Terraform Init
+        run: terraform init -backend=false
+        working-directory: ${{ matrix.module }}
+
+      - name: Terraform Test
+        run: terraform test
+        working-directory: ${{ matrix.module }}
 
   terraform-docs:
     name: Terraform Docs
@@ -70,6 +102,8 @@ jobs:
         module:
           - infrastructure/proxmox/modules/vm
           - infrastructure/proxmox/modules/lxc
+          - infrastructure/proxmox/modules/backup
+          - infrastructure/proxmox/modules/minio
           - infrastructure/proxmox/modules/monitoring-stack
     steps:
       - name: Checkout
